# pymongo-snippets

./: example.env  pyproject.toml
src/: s1_insert_one.py  s2_find_one.py  s3_insert_many.py  s4_mixed_bulk_write.py  s5_aggregation.py
src/db_client/: __init__.py  config.py  db_client.py
